--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ monitor_speed = 115200
 lib_deps = 
     adafruit/Adafruit SSD1306@^2.5.7
     adafruit/Adafruit GFX Library@^1.11.3
+    adafruit/DHT sensor library@^1.4.4
